--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -1,4 +1,13 @@
 .entry_cards {
   display: flex;
   flex-direction: column;
+  background: url(https://media.istockphoto.com/photos/abstract-red-and-black-are-light-pattern-with-the-gradient-is-the-picture-id1205633216?k=20&m=1205633216&s=612x612&w=0&h=KWDzx6e4FX20F7Ff1HZgcRdQLRc_JdyB2BYthmEbMyQ=) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  .MuiPaper-root {
+    margin: 50px;
+  }
 }
