add styling to table

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -9,5 +9,22 @@
 
   .MuiPaper-root {
     margin: 50px;
+
+    table {
+      // border: 1px solid black;
+      margin-left: 5%;
+
+      th {
+        width: 30%;
+      }
+
+      td {
+        padding: 0 15px;
+      }
+    }
+
+    .MuiCardContent-root {
+      align-items: center;
+    }
   }
 }
