--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -4,6 +4,16 @@
   flex-direction: column;
   justify-content: space-around;
 
+  .MuiPaper-root {
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
+  }
+  
+  .series-container {
+    margin-top: 20px;
+  }
+
   .placement-container {
     display: flex;
     justify-content: space-around;
