add classname styling to gtwca to be gradient red

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -9,6 +9,12 @@
 
   .competitor-card {
     margin: 25px;
+
+      .entry-detail_GTWCA {
+        background: rgb(2,0,36);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,37,18,1) 95%);
+      }
+    
   }
 
   .MuiPaper-root {
