--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -14,6 +14,11 @@
         background: rgb(2,0,36);
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,37,18,1) 95%);
       }
+
+      .entry-detail_PGT4A {
+        background: rgb(2,0,36);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(67,92,249,1) 60%);
+      }
     
   }
 
