add rest of series background colors

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -19,6 +19,16 @@
         background: rgb(2,0,36);
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(67,92,249,1) 60%);
       }
+
+      .entry-detail_TCA {
+        background: rgb(2,0,36);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(179,179,182,1) 60%);
+      }
+
+      .entry-detail_GTA {
+        background: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(101,101,102,1) 100%); 
+      }
     
   }
 
