--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -1,18 +1,23 @@
 .entry_cards {
   display: flex;
   flex-wrap: wrap;
-  background: url(https://media.istockphoto.com/photos/abstract-red-and-black-are-light-pattern-with-the-gradient-is-the-picture-id1205633216?k=20&m=1205633216&s=612x612&w=0&h=KWDzx6e4FX20F7Ff1HZgcRdQLRc_JdyB2BYthmEbMyQ=) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  // background: url(../images/background1.jpg) no-repeat center center fixed; 
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
 
   .competitor-card {
     margin: 25px;
 
+    .MuiTypography-h5 {
+      color:white;
+      font-weight: bold;
+    }
+
       .entry-detail_GTWCA {
-        background: rgb(2,0,36);
-        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(235,37,18,1) 95%);
+        background: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,22,7,1) 100%);
       }
 
       .entry-detail_PGT4A {
