add table styling to driver details table

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,6 +10,15 @@
   .competitor-card {
     margin: 25px;
 
+    .driver-table {
+      .MuiTableHead-root {
+        th {
+          font-weight: bold;
+        }
+    
+      }
+    }
+
     .MuiTypography-h5 {
       color:white;
       font-weight: bold;
