--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -4,6 +4,10 @@
   align-items: center;
   padding-bottom: 50px;
 
+  .result-table-container {
+    margin: 30px;
+  }
+
   .MuiButton-root {
     margin-top: 30px;
   }
