--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding-bottom: 50px;
 
-  .result-table-container {
+  #result-table-container {
     margin: 40px;
   }
 
