add media print query to hide all except result table container div

--- a/podium-helper/src/Styling/result.scss
+++ b/podium-helper/src/Styling/result.scss
@@ -10,3 +10,17 @@
 
   }
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #result-table-container, #result-table-container * {
+    visibility: visible;
+  }
+  #result-table-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
