--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -19,6 +19,16 @@
       }
     }
 
+    button {
+      border: none;
+      background: none;
+      padding-top: 50%;
+    
+      img {
+        height: 30px;
+      }
+    }
+
     .MuiTypography-h5 {
       color:white;
       font-weight: bold;
