add driver-info-toggle to competitor card. add display flex, align items center and gap 30px

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,6 +10,12 @@
   .competitor-card {
     margin: 25px;
 
+    .driver-info-toggle {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+
     .driver-table {
       .MuiTableHead-root {
         th {
