--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -14,6 +14,10 @@
       display: flex;
       align-items: center;
       gap: 30px;
+
+      h4 {
+        color: white;
+      }
     }
 
     .driver-table {
