add styling to cardheader title

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,6 +10,12 @@
   .competitor-card {
     margin: 25px;
 
+    .MuiTypography-body2 {
+      color: white;
+      font-size: 30px;
+      font-weight: bold;
+    }
+
     .driver-info-toggle {
       display: flex;
       align-items: center;
