add styling for MuiAvatar img object fit. change body2 font-size to 25px

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,9 +10,15 @@
   .competitor-card {
     margin: 25px;
 
+    .MuiAvatar-root {
+      img {
+        object-fit: contain;
+      }
+    }
+
     .MuiTypography-body2 {
       color: white;
-      font-size: 30px;
+      font-size: 25px;
       font-weight: bold;
     }
 
