add position relative to competitor card. add class car-numbe and position absolute, top, left, font-weight, size and color

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -9,6 +9,16 @@
 
   .competitor-card {
     margin: 25px;
+    position: relative;
+
+    .car-number {
+      position: absolute;
+      top: 100px;
+      left: 20px;
+      font-weight: bold;
+      font-size: 40px;
+      color: white;
+    }
 
     .MuiAvatar-root {
       img {
