--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,7 +10,7 @@
   // background-size: cover;
 
   .competitor-card {
-    margin: 25px;
+    margin: 10px;
     position: relative;
 
     .car-number {
@@ -18,6 +18,7 @@
       top: 135px;
       font-size: 80px;
       color: white;
+      -webkit-text-stroke: 3px red;
       font-family: 'Sports Jersey', sans-serif;
     }
 
