add .manufacturer-avatar styling, position absolutee, top 31 and right 15

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -13,6 +13,12 @@
     margin: 10px;
     position: relative;
 
+    .manufacturer-avatar {
+      position: absolute;
+      top: 31px;
+      right: 15px;
+    }
+
     .car-number {
       position: absolute;
       top: 135px;
