--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -45,6 +45,10 @@
       align-items: center;
       gap: 30px;
 
+      svg {
+        color: white;
+      }
+
       h4 {
         color: white;
       }
