add styling to competitor card, pass card-banner-img class and set width to 175

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -13,6 +13,11 @@
     margin: 10px;
     position: relative;
 
+    .class-banner-img {
+        width: 175px;
+    }
+
+
     .manufacturer-avatar {
       position: absolute;
       top: 149px;
