--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -25,7 +25,8 @@
 
     .car-number {
       position: absolute;
-      top: 135px;
+      bottom: 60px;
+      left: -20px;
       font-size: 80px;
       color: white;
       -webkit-text-stroke: 3px red;
