--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -25,7 +25,7 @@
 
     .car-number {
       position: absolute;
-      bottom: 60px;
+      top: 310px;
       left: -20px;
       font-size: 80px;
       color: white;
