add target for car-number-3. reduce font size and left -25

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -43,6 +43,16 @@
       font-family: 'Sports Jersey', sans-serif;
     }
 
+    .car-number-3 {
+      position: absolute;
+      top: 310px;
+      left: -25px;
+      font-size: 70px;
+      color: white;
+      -webkit-text-stroke: 3px red;
+      font-family: 'Sports Jersey', sans-serif;
+    }
+
     .MuiAvatar-root {
       img {
         object-fit: contain;
