--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -3,6 +3,7 @@
 .entry_cards {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   // background: url(../images/background1.jpg) no-repeat center center fixed; 
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
