target entry-details and then elevation details to set margin-left -10px

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -80,6 +80,12 @@
       }
     }
 
+    .entry-details {
+      .elevation-details {
+        margin-left: -10px;
+      }
+    }
+
     .driver-table {
       .MuiTableHead-root {
         th {
