--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 50px;
+  margin-top: 50px;
 
   #result-table-container {
     margin: 40px;
