--- a/podium-helper/src/Styling/result.scss
+++ b/podium-helper/src/Styling/result.scss
@@ -1,3 +1,10 @@
+.result-container {
+  .result-history-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 #result-table-container {
 
   .result-table-head {
