target class form-control and set background to white. easier visiblity for testing

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -10,6 +10,10 @@
     width: 60%;
   }
 
+  .form-control {
+    background-color: white;
+  }
+
   .sort-option-selector {
     padding: 30px;
   }
