--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -1,11 +1,13 @@
 @import url('http://fonts.cdnfonts.com/css/sports-jersey');
 .competitors-container {
-
+  height: 100vh;
   background: url(../images/background1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+
   .MuiFormControl-root {
     width: 60%;
   }
