target search-sort-options and apply flex and space around

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -6,6 +6,10 @@
   -o-background-size: cover;
   background-size: cover;
 
+  .search-sort-options {
+    display: flex;
+    justify-content: space-around;
+  }
 
   .MuiFormControl-root {
     width: 60%;
