remove targeet of sort-option-selectorr and remove its 30px padding. target search-sort-option and add padding top 40px and bottom 20px

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -9,6 +9,8 @@
   .search-sort-options {
     display: flex;
     justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 20px;
   }
 
   .MuiFormControl-root {
@@ -17,10 +19,6 @@
 
   .form-control {
     background-color: white;
-  }
-
-  .sort-option-selector {
-    padding: 30px;
   }
 
   .entry_cards {
