--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -11,6 +11,10 @@
     justify-content: space-around;
     padding-top: 40px;
     padding-bottom: 20px;
+
+    .MuiInputLabel-root {
+      color: red;
+    }
   }
 
   .MuiFormControl-root {
