target class No-Result and add height 100vh

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -30,6 +30,10 @@
     flex-wrap: wrap;
     justify-content: center;
 
+    .No-Result {
+      height: 100vh;
+    }
+
     .competitor-card {
       margin: 10px;
       position: relative;
