target img element within No-result and add object-fit - contain

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -32,7 +32,10 @@
 
     .No-Result {
       height: 100vh;
-      color: red;
+      
+      img {
+        object-fit: contain;
+      }
     }
 
     .competitor-card {
