--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -32,9 +32,18 @@
 
     .No-Result {
       height: 100vh;
+
+      .MuiPaper-root {
+        background: url(../images/background1.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
       
       img {
         object-fit: contain;
+        background-color: white;
       }
     }
 
