change copy paste background settings to background inherit

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -34,11 +34,7 @@
       height: 100vh;
 
       .MuiPaper-root {
-        background: url(../images/background1.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+        background: inherit;
       }
       
       img {
