target MuiTypography-h2 within no-result, add font-weight bold

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -37,6 +37,10 @@
       .MuiPaper-root {
         background: inherit;
       }
+
+      .MuiTypography-h2 {
+        font-weight: bold;
+      }
       
       img {
         object-fit: contain;
