target MuiTypography-body2 within no-result, add font-size 20px

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -41,6 +41,10 @@
       .MuiTypography-h2 {
         font-weight: bold;
       }
+
+      .MuiTypography-body2 {
+        font-size: 20px;
+      }
       
       img {
         object-fit: contain;
