--- a/podium-helper/src/Styling/navBar.scss
+++ b/podium-helper/src/Styling/navBar.scss
@@ -4,4 +4,10 @@
     width: 100px;
     object-fit: contain;
   }
+
+  .navbar-links {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
 }
