add align items center to navbar-links. target anchor tags within navbar-links and style with text decoration none

--- a/podium-helper/src/Styling/navBar.scss
+++ b/podium-helper/src/Styling/navBar.scss
@@ -9,5 +9,11 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    
+    a {
+      text-decoration: none;
+      
+    }
   }
 }
