--- a/podium-helper/src/Styling/navBar.scss
+++ b/podium-helper/src/Styling/navBar.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&family=Playfair+Display&family=Raleway:wght@100;800&family=Source+Sans+Pro:ital,wght@1,600&display=swap');
+
 .nav-bar {
   img {
     height: 50px;
@@ -13,7 +15,7 @@
     
     a {
       text-decoration: none;
-      
+      font-family: 'Playfair Display', serif;
     }
   }
 }
