--- a/podium-helper/src/Styling/navBar.scss
+++ b/podium-helper/src/Styling/navBar.scss
@@ -16,7 +16,9 @@
     a {
       text-decoration: none;
       font-family: 'Raleway', sans-serif;
-
+      font-size: 18px;
+      font-weight: bold;
+      color: white;
     }
   }
 }
