--- a/podium-helper/src/Styling/navBar.scss
+++ b/podium-helper/src/Styling/navBar.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&family=Raleway:wght@100;600;800&family=Source+Sans+Pro:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;600;800&');
 
 .nav-bar {
   img {
