add to detailClass, create classNames for IGTC

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -176,6 +176,11 @@
           background: rgb(0,0,0);
           background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(101,101,102,1) 100%); 
         }
+
+        .entry-detail_IGTC {
+          background: rgb(0,0,0);
+          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(168, 185, 9) 100%); 
+        }
       
     }
 
