updat gradient color for entry-details_IGTC to be yellow gradient

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -179,7 +179,7 @@
 
         .entry-detail_IGTC {
           background: rgb(0,0,0);
-          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(168, 185, 9) 100%); 
+          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,248,7,1) 100%);
         }
       
     }
