--- a/podium-helper/src/Styling/entryDash.scss
+++ b/podium-helper/src/Styling/entryDash.scss
@@ -1,6 +1,13 @@
 .MuiTableContainer-root {
-  th {
-    color: red;
-    font-weight: bold;
+
+  .MuiTableRow-head {
+
+    background-color: #3e3d3d;
+
+    th {
+      color: red;
+      font-weight: bold;
+    }
+
   }
 }
