move styling for class search-sort-options and from competitor scss to app.scss

--- a/podium-helper/src/App.scss
+++ b/podium-helper/src/App.scss
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+
+  .search-sort-options {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 20px;
+
+    .MuiInputLabel-root {
+      color: red;
+    }
+  }
 }
 
 .App-logo {
