nest within .App the nopresult target and all nested styling

--- a/podium-helper/src/App.scss
+++ b/podium-helper/src/App.scss
@@ -11,6 +11,28 @@
       color: red;
     }
   }
+
+  .No-Result {
+    height: 100vh;
+    margin-top: 10%;
+
+    .MuiPaper-root {
+      background: inherit;
+    }
+
+    .MuiTypography-h2 {
+      font-weight: bold;
+    }
+
+    .MuiTypography-body2 {
+      font-size: 20px;
+    }
+    
+    img {
+      object-fit: contain;
+      background-color: white;
+    }
+  }
 }
 
 .App-logo {
