--- a/podium-helper/src/Styling/entryDash.scss
+++ b/podium-helper/src/Styling/entryDash.scss
@@ -1,5 +1,11 @@
 .entry-dashboard {
 
+  background: url(../images/background1.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
   .MuiTableContainer-root {
 
     #entry-manager-head {
