--- a/podium-helper/src/Styling/entryDash.scss
+++ b/podium-helper/src/Styling/entryDash.scss
@@ -6,6 +6,14 @@
   -o-background-size: cover;
   background-size: cover;
 
+  .form-control {
+    background-color: white;
+  }
+
+  .MuiFormControl-root {
+    width: 60%;
+  }
+
   .MuiTableContainer-root {
 
     #entry-manager-head {
