target MuiToolbar-root  and add color white

--- a/podium-helper/src/Styling/entryDash.scss
+++ b/podium-helper/src/Styling/entryDash.scss
@@ -29,7 +29,12 @@
   }
 
   .Edit-Table {
+
     .MuiDataGrid-root {
+      color: white;
+    }
+
+    .MuiToolbar-root {
       color: white;
     }
   }
