target results-detail class. add display inherit, space around and width 100%

--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -5,6 +5,12 @@
   padding-bottom: 50px;
   margin-top: 50px;
 
+  .results-details {
+    display: inherit;
+    justify-content: space-around;
+    width: 100%;
+  }
+
   #result-table-container {
     margin: 40px;
   }
