--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -18,4 +18,9 @@
   .MuiButton-root {
     margin-top: 30px;
   }
+
+  .podium_results_container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
