within app, target class recent-podium-container and add nested muibutton-root styling

--- a/podium-helper/src/App.scss
+++ b/podium-helper/src/App.scss
@@ -33,6 +33,12 @@
       background-color: white;
     }
   }
+
+  .recent-podium-container {
+    .MuiButton-root {
+      margin-top: 30px;
+    }
+  }
 }
 
 .App-logo {
