remove styling for recent-podium-container and mui button. move logic into results.scss

--- a/podium-helper/src/Styling/result.scss
+++ b/podium-helper/src/Styling/result.scss
@@ -22,6 +22,12 @@
   }
 }
 
+.recent-podium-container {
+  .MuiButton-root {
+    margin-top: 30px;
+  }
+}
+
 @media print {
   body * {
     visibility: hidden;
