add display flex and justify content to restul-table-container

--- a/podium-helper/src/Styling/result.scss
+++ b/podium-helper/src/Styling/result.scss
@@ -6,6 +6,8 @@
   }
 }
 #result-table-container {
+  display: flex;
+  justify-content: center;
 
   .result-table-head {
     background-color: #282828;
