target id for podium submit all and set margin top

--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -11,6 +11,10 @@
     width: 100%;
   }
 
+  #podium__submit_all {
+    margin-top: 20px;
+  }
+
   #result-table-container {
     margin: 40px;
   }
