--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -12,24 +12,39 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 2% 2% 2% 6%;
+  padding: 2%;
   background-color: red;
   color: white;
   font-weight: 400;
+
+  h2 {
+    margin: 0;
+  }
 
   .input_driver_container {
     display: flex;
     justify-content: space-around;
     width: 100%;
 
+    .editModal_input {
+      display: flex;
+      flex-direction: column;
+    }
+
     &.single_driver {
       .input_driver_container_1 {
         display: flex;
         justify-content: space-between;
+        width: 100%;
       }
+    }
 
-      .editModal_input {
+    &.two_driver {
+      height: 40%;
+
+      section {
         display: flex;
+        justify-content: space-between;
         flex-direction: column;
       }
     }
@@ -54,8 +69,7 @@
       flex-direction: column;
     }
   }
-
-  // .single_driver {
-  //   display: flex;
-  // }
+  .MuiButton-root {
+    background-color: black;
+  }
 }
