--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -10,3 +10,23 @@
     }
   }
 }
+
+#addEntry_modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  height: 200px;
+  min-height: 350px;
+  border: 2px solid black;
+  box-shadow: 10px 5px 5px black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 2%;
+  background-color: red;
+  color: white;
+  font-weight: 400;
+}
