target editModal_inputs and give display and flex direction

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -29,4 +29,9 @@
   background-color: red;
   color: white;
   font-weight: 400;
+
+  .editModal_input {
+    display: flex;
+    flex-direction: column;
+  }
 }
