target class duo, give display, justify content, width and margin

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -34,4 +34,11 @@
     display: flex;
     flex-direction: column;
   }
+
+  .duo {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 4%;
+  }
 }
