remove styling for h2 margin 0. add in margin bottom h1 for zero. add margin to input_driver_container

--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -17,14 +17,15 @@
   color: white;
   font-weight: 400;
 
-  h2 {
-    margin: 0;
+  h1 {
+    margin-bottom: 0;
   }
 
   .input_driver_container {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    margin: 5%;
 
     .editModal_input {
       display: flex;
