--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -16,7 +16,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 80%;
   height: 70%;
   min-height: 350px;
   border: 2px solid black;
@@ -33,6 +33,12 @@
   .editModal_input {
     display: flex;
     flex-direction: column;
+
+    .input_vehicle_container {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+    }
   }
 
   .duo {
