target entry_manager then filter container. style with display, jsutify content and margin

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -58,3 +58,11 @@
     min-width: 120px;
   }
 }
+
+#entry_manager {
+  .entryManager_filter_container {
+    display: flex;
+    justify-content: space-around;
+    margin: 3%;
+  }
+}
