--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -41,6 +41,15 @@
     }
   }
 
+  .single {
+    width: 100%;
+
+    .input_driver_container_1 {
+      display: flex;
+      justify-content: space-around;
+    }
+  }
+
   .duo {
     display: flex;
     justify-content: space-between;
