target input_driver_container, and section nested, style with display, flex direction and justify content. in class duo, give height

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -36,6 +36,14 @@
     width: 100%;
   }
 
+  .input_driver_container {
+    section {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+  }
+
   .editModal_input {
     display: flex;
     flex-direction: column;
@@ -55,6 +63,7 @@
     justify-content: space-between;
     width: 80%;
     margin: 4%;
+    height: 30%;
   }
 
   .MuiButton-root {
