--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -9,6 +9,10 @@
     display: inherit;
     justify-content: space-around;
     width: 100%;
+
+    .MuiFormControl-root {
+      min-width: 225px;
+    }
   }
 
   #podium__submit_all {
