--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -3,6 +3,14 @@
     display: flex;
     justify-content: space-around;
     margin: 3%;
+
+    .series_dropdown {
+      min-width: 200px;
+    }
+
+    .entryManager__search {
+      min-width: 400px;
+    }
   }
 
   #entryManager_table {
