target filter details, nested target event and search to style with min width

--- a/podium-helper/src/Styling/result.scss
+++ b/podium-helper/src/Styling/result.scss
@@ -1,4 +1,13 @@
 .result-container {
+  .filter-details {
+    .event_dropdown {
+      min-width: 150px;
+    }
+
+    .result_search {
+      min-width: 300px;
+    }
+  }
   .result-history-list {
     display: flex;
     flex-direction: column;
