--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -53,8 +53,7 @@
 
   .input_vehicle_container {
     display: flex;
-    justify-content: space-between;
-    gap: 5%;
+    justify-content: space-around;
     width: 100%;
 
     .input_classification {
@@ -63,6 +62,10 @@
 
     .input_number {
       width: 15%;
+    }
+
+    .input_vehicle {
+      min-width: 250px;
     }
 
     .editModal_input {
