target class dropdown nested, target label and inputbase set color to white

--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -63,6 +63,13 @@
     justify-content: space-around;
     width: 100%;
 
+    #class_dropdown {
+      label,
+      .MuiInputBase-root {
+        color: white;
+      }
+    }
+
     .input_classification {
       width: 10%;
     }
