--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -1,8 +1,8 @@
-@import url('http://fonts.cdnfonts.com/css/sports-jersey');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue');
+@import url("http://fonts.cdnfonts.com/css/sports-jersey");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue");
 
 .competitors-container {
-  background: url(../images/background1.jpg) no-repeat center center fixed; 
+  background: url(../images/background1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -26,12 +26,12 @@
       position: relative;
 
       .class-banner-img {
-          width: 140px;
+        width: 140px;
       }
 
       .MuiCardHeader-content {
         span {
-          font-family: 'Bebas Neue', cursive;
+          font-family: "Bebas Neue", cursive;
           font-size: 30px;
           font-weight: normal;
         }
@@ -50,7 +50,7 @@
         font-size: 80px;
         color: white;
         -webkit-text-stroke: 3px red;
-        font-family: 'Sports Jersey', sans-serif;
+        font-family: "Sports Jersey", sans-serif;
       }
 
       .car-number-1 {
@@ -60,7 +60,7 @@
         font-size: 80px;
         color: white;
         -webkit-text-stroke: 3px red;
-        font-family: 'Sports Jersey', sans-serif;
+        font-family: "Sports Jersey", sans-serif;
       }
 
       .car-number-3 {
@@ -70,7 +70,7 @@
         font-size: 70px;
         color: white;
         -webkit-text-stroke: 3px red;
-        font-family: 'Sports Jersey', sans-serif;
+        font-family: "Sports Jersey", sans-serif;
       }
 
       .MuiAvatar-root {
@@ -110,7 +110,6 @@
           th {
             font-weight: bold;
           }
-      
         }
       }
 
@@ -120,39 +119,60 @@
       }
 
       .MuiTypography-h5 {
-        color:white;
+        color: white;
         font-weight: bold;
       }
 
-        .entry-detail_GTWCA {
-          background: rgb(0,0,0);
-          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,22,7,1) 100%);
-        }
+      .entry-detail_GTWCA {
+        background: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgba(255, 22, 7, 1) 100%
+        );
+      }
 
-        .entry-detail_PGT4A {
-          background: rgb(2,0,36);
-          background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(67,92,249,1) 60%);
-        }
+      .entry-detail_PGT4A {
+        background: linear-gradient(
+          90deg,
+          rgba(2, 0, 36, 1) 0%,
+          rgba(67, 92, 249, 1) 60%
+        );
+      }
 
-        .entry-detail_TCA {
-          background: rgb(2,0,36);
-          background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(179,179,182,1) 60%);
-        }
+      .entry-detail_TCA {
+        background: linear-gradient(
+          90deg,
+          rgba(2, 0, 36, 1) 0%,
+          rgba(179, 179, 182, 1) 60%
+        );
+      }
 
-        .entry-detail_GTA {
-          background: rgb(0,0,0);
-          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(101,101,102,1) 100%); 
-        }
+      .entry-detail_GTA {
+        background: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgba(101, 101, 102, 1) 100%
+        );
+      }
 
-        .entry-detail_IGTC {
-          background: rgb(0,0,0);
-          background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,248,7,1) 100%);
-        }
-      
+      .entry-detail_IGTC {
+        background: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgba(255, 248, 7, 1) 100%
+        );
+      }
+
+      .entry-detail_GRCup {
+        background: linear-gradient(
+          90deg,
+          rgba(2, 0, 36, 1) 0%,
+          rgb(255, 139, 7) 100%
+        );
+      }
     }
 
     .MuiPaper-root {
-
       .MuiCardContent-root {
         display: flex;
         flex-direction: column;
