target entry_detail item, add max and minn width. set min height. nested targer entry-media then header. set min height and max width

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -170,6 +170,19 @@
           rgb(255, 139, 7) 100%
         );
       }
+
+      .entry-detail__item {
+        max-width: 345px;
+        min-height: 375px;
+        min-width: 375px;
+
+        .entry-media {
+          .MuiCardHeader-root {
+            min-height: 100px;
+            max-width: 325px;
+          }
+        }
+      }
     }
 
     .MuiPaper-root {
