--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -43,36 +43,6 @@
         right: 15px;
       }
 
-      .car-number-2 {
-        position: absolute;
-        top: 310px;
-        left: -20px;
-        font-size: 80px;
-        color: white;
-        -webkit-text-stroke: 3px red;
-        font-family: "Sports Jersey", sans-serif;
-      }
-
-      .car-number-1 {
-        position: absolute;
-        top: 310px;
-        left: 0px;
-        font-size: 80px;
-        color: white;
-        -webkit-text-stroke: 3px red;
-        font-family: "Sports Jersey", sans-serif;
-      }
-
-      .car-number-3 {
-        position: absolute;
-        top: 310px;
-        left: -25px;
-        font-size: 70px;
-        color: white;
-        -webkit-text-stroke: 3px red;
-        font-family: "Sports Jersey", sans-serif;
-      }
-
       .MuiTypography-body2 {
         color: white;
         font-size: 25px;
@@ -171,6 +141,12 @@
         min-width: 375px;
 
         .entry-media {
+          .manufacturer-avatar {
+            position: absolute;
+            top: 325px;
+            right: 15px;
+          }
+
           .MuiAvatar-root {
             background-color: white;
             width: 59px;
@@ -180,6 +156,7 @@
               object-fit: contain;
             }
           }
+
           .MuiCardHeader-root {
             min-height: 100px;
             max-width: 325px;
