move width styling from form control to be competitor search. move background color white from form-control to muiformcontrol

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -8,11 +8,11 @@
   -o-background-size: cover;
   background-size: cover;
 
-  .MuiFormControl-root {
+  .competitor_search {
     width: 60%;
   }
 
-  .form-control {
+  .MuiFormControl-root {
     background-color: white;
   }
 
