target sort-option-selector and nested muiform to style min width

--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -8,6 +8,12 @@
   -o-background-size: cover;
   background-size: cover;
 
+  .sort-option-selector {
+    .MuiFormControl-root {
+      min-width: 150px;
+    }
+  }
+
   .competitor_search {
     width: 60%;
   }
