target hard charge and fast lap container, move over styling from podium style sheet

--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -52,3 +52,20 @@
     }
   }
 }
+
+.hard_charger_container,
+.fast-lap-container {
+  .fast_lap__input {
+    margin-bottom: 10px;
+  }
+
+  .MuiFormControl-root {
+    min-width: 250px;
+  }
+
+  .MuiButton-root {
+    max-width: 200px;
+    align-self: center;
+    margin-top: 10px;
+  }
+}
