target podium_card ad set justify content, and target h2 padding bottom. change fast_lap_input to be podium_card_input

--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -55,7 +55,15 @@
 
 .hard_charger_container,
 .fast-lap-container {
-  .fast_lap__input {
+  .podium_card {
+    justify-content: center;
+
+    h2 {
+      padding-bottom: 10%;
+    }
+  }
+
+  .podium_card__input {
     margin-bottom: 10px;
   }
 
