--- a/podium-helper/src/Styling/competitors.scss
+++ b/podium-helper/src/Styling/competitors.scss
@@ -72,6 +72,9 @@
       }
 
       .driver-table {
+        table {
+          min-width: 300px;
+        }
         .MuiTableHead-root {
           th {
             font-weight: bold;
