import winnerTop3 style sheet to target cards for podiums and fast laps

--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -30,12 +30,12 @@
   }
 
   .fast-lap-container {
-    border: 1px solid;
-    padding: 10px;
-    box-shadow: 5px 10px #888888;
-    min-width: 450px;
-    display: flex;
-    flex-direction: column;
+    // border: 1px solid;
+    // padding: 10px;
+    // box-shadow: 5px 10px #888888;
+    // min-width: 450px;
+    // display: flex;
+    // flex-direction: column;
 
     .fast_lap__input {
       margin-bottom: 10px;
