target placement_input and style min width

--- a/podium-helper/src/Styling/podium.scss
+++ b/podium-helper/src/Styling/podium.scss
@@ -27,5 +27,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    .placement_input {
+      .MuiFormControl-root {
+        min-width: 300px;
+      }
+    }
   }
 }
