--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -68,7 +68,7 @@
         flex-direction: column;
     }
 
-    .single {
+    .drivers_1 {
         width: 100%;
 
         .input_driver_container_1 {
@@ -77,7 +77,8 @@
         }
     }
 
-    .duo {
+    .drivers_2,
+    .drivers_3 {
         display: flex;
         justify-content: space-between;
         width: 80%;
