--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -4,6 +4,10 @@
         justify-content: space-around;
         margin: 3%;
 
+        .event_dropdown {
+            min-width: 150px;
+        }
+
         .series_dropdown {
             min-width: 200px;
             width: 25%;
