--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -37,6 +37,11 @@
             flex-direction: column;
         }
 
+        #fia_dropdown {
+            display: flex;
+            flex-direction: column;
+        }
+
         &.driver_1 {
             margin-bottom: 2%;
             .input_driver_container_1 {
