--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -30,7 +30,14 @@
         justify-content: space-around;
         width: 100%;
         margin-top: 2%;
-        // margin: 5%;
+        
+        .input_driver_container_1,
+        .input_driver_container_2,
+        .input_driver_container_3 {
+            display: flex;
+            flex-direction: column;
+            gap: 10%;
+        }
 
         .editModal_input {
             display: flex;
