--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -21,8 +21,11 @@
         min-height: 50%;
     }
 
-    h1 {
-        margin-bottom: 0;
+    #entry_info {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .input_driver_container {
