inside id edit_modal target min height and font size

--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -17,6 +17,11 @@
     color: white;
     font-weight: 400;
 
+    select {
+        min-height: 30px;
+        font-size: large;
+    }
+
     input {
         min-height: 50%;
     }
