move target for fia dropdown to sit inside edit_modal. pass vehicle_dropdown to same styling block

--- a/podium-helper/src/Styling/modal.scss
+++ b/podium-helper/src/Styling/modal.scss
@@ -26,6 +26,11 @@
         min-height: 50%;
     }
 
+    #fia_dropdown, #vehicle_dropdown {
+        display: flex;
+        flex-direction: column;
+    }
+
     #entry_info {
         width: 80%;
         display: flex;
@@ -48,11 +53,6 @@
         }
 
         .editModal_input {
-            display: flex;
-            flex-direction: column;
-        }
-
-        #fia_dropdown {
             display: flex;
             flex-direction: column;
         }
