in target for dropdowns, add class dropdown

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -51,7 +51,7 @@
     color: white;
     font-weight: 400;
 
-    #fia_dropdown, #vehicle_dropdown {
+    #fia_dropdown, #vehicle_dropdown, #class_dropdown {
         display: flex;
         flex-direction: column;
         max-width: 40%;
