target select elements and set min height and font size

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -51,6 +51,11 @@
     color: white;
     font-weight: 400;
 
+    select {
+        min-height: 30px;
+        font-size: large;
+    }
+
     .dropdown {
         display: flex;
         flex-direction: column;
