add target inside add entry modal to target input elements and set font size alrge

--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -49,7 +49,10 @@
     padding: 2%;
     background-color: red;
     color: white;
-    font-weight: 400;
+
+    input {
+        font-size: large;
+    }
 
     select {
         min-height: 30px;
