--- a/podium-helper/src/Styling/entryManager.scss
+++ b/podium-helper/src/Styling/entryManager.scss
@@ -63,7 +63,7 @@
         display: flex;
         flex-direction: column;
 
-        &#dropdown_class, &#dropdown_fia {
+        &#dropdown_class, &#dropdown_fia, &#dropdown_vehicle {
             min-width: 10%;
         }
     }
