--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -51,6 +51,13 @@
       flex-direction: column;
     }
   }
+
+  .hard_charge_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
 }
 
 .hard_charger_container,
