inside hard charge containre, target h5 and set margin bottom. then targt input and set dispalay flex

--- a/podium-helper/src/Styling/winnerTop3.scss
+++ b/podium-helper/src/Styling/winnerTop3.scss
@@ -57,6 +57,14 @@
     flex-direction: column;
     justify-content: space-around;
     height: 80%;
+
+    h5 {
+      margin-bottom: 5px;
+    }
+
+    .hard_charge_input {
+      display: flex;
+    }
   }
 }
 
